chassis/tests/failing/missing_dep.stderr
error: Missing dependency `IntArg`
  --> $DIR/missing_dep.rs:22:54
   |
22 |         pub fn provide_dummy(string: StringArg, int: IntArg) -> Dummy {
   |                                                      ^^^^^^
   |
help: required for `Dummy`
  --> $DIR/missing_dep.rs:28:36
   |
28 |         fn resolve_dummy(&self) -> Dummy;
   |                                    ^^^^^
